<?xml version="1.0" encoding="UTF-8"?>
<project
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.mondo.collaboration.security</groupId>
  <artifactId>org.mondo.collaboration.security</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <tycho-version>0.23.0</tycho-version>
    <tycho.extras.version>${tycho-version}</tycho.extras.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <xtend-version>2.8.4</xtend-version>
    <java.version>1.8</java.version>
    <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
    <jacoco.version>0.7.0.201403182114</jacoco.version>
		<jacoco.targetdir>${project.basedir}/../../target</jacoco.targetdir>
  </properties>

  <modules>
    <module>../../releng/org.mondo.collaboration.security.targetplatform</module>
    <module>../../plugins/org.mondo.collaboration.security.lens</module>
    <module>../../plugins/org.mondo.collaboration.security.lens.offline.cli</module>
    <module>../../plugins/org.mondo.collaboration.security.macl.xtext.rule</module>
    <module>../../plugins/org.mondo.collaboration.security.macl.xtext.rule.ui</module>
    <module>../../plugins/org.mondo.collaboration.security.macl.xtext</module>
    <module>../../plugins/org.mondo.collaboration.security.macl.xtext.ui</module>
    <module>../../plugins/org.mondo.collaboration.security.mpbl.xtext</module>
    <module>../../plugins/org.mondo.collaboration.security.mpbl.xtext.ui</module>
    <module>../../plugins/org.mondo.collaboration.security.mpbl.client</module>
    <module>../../plugins/org.mondo.collaboration.security.mpbl.client.ui</module>
    <module>../../plugins/org.mondo.collaboration.security.mpbl.server</module>
    <module>../../features/org.mondo.collaboration.security.macl.feature</module>
    <module>../../features/org.mondo.collaboration.security.mpbl.feature</module>
    <module>../../releng/org.mondo.collaboration.security.updatesite</module>
  </modules>

  <build>
  <plugins>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.1</version>
      <configuration>
        <compilerVersion>${java.version}</compilerVersion>
        <source>${java.version}</source>
        <target>${java.version}</target>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.eclipse.tycho</groupId>
      <artifactId>tycho-maven-plugin</artifactId>
      <version>${tycho-version}</version>
      <extensions>true</extensions>
      <configuration>
        <compilerVersion>${java.version}</compilerVersion>
        <source>${java.version}</source>
        <target>${java.version}</target>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.eclipse.tycho</groupId>
      <artifactId>target-platform-configuration</artifactId>
      <version>${tycho-version}</version>
      <configuration>
        <target>
          <artifact>
            <groupId>org.mondo.collaboration.security</groupId>
            <artifactId>org.mondo.collaboration.security.targetplatform</artifactId>
            <version>1.0.0-SNAPSHOT</version>
          </artifact>
        </target>
      </configuration>
    </plugin>
    <plugin>
      <groupId>org.eclipse.tycho</groupId>
      <artifactId>tycho-source-plugin</artifactId>
      <version>${tycho-version}</version>
      <executions>
        <execution>
          <id>plugin-source</id>
          <goals>
            <goal>plugin-source</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
  </plugins>
  <pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <compilerVersion>${java.version}</compilerVersion>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-compiler-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <environments>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-surefire-plugin</artifactId>
        <version>${tycho-version}</version>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-p2-repository-plugin</artifactId>
        <version>${tycho-version}</version>
      </plugin>
      <plugin>
        <groupId>org.eclipse.xtend</groupId>
        <artifactId>xtend-maven-plugin</artifactId>
        <version>${xtend-version}</version>
        <configuration>
          <!-- need to prefix by basedir to generate to currently built module -->
          <outputDirectory>${basedir}/xtend-gen</outputDirectory>
          <javaSourceVersion>${java.version}</javaSourceVersion>
        </configuration>
      </plugin>
      <plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<configuration>
					<destFile>${jacoco.targetdir}/jacoco.exec</destFile>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
  </pluginManagement>
</build>
	<pluginRepositories>
		<pluginRepository>
			<id>sonatype</id>
			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<!-- Fornax Workflow Runner plugin -->
	</pluginRepositories>

	<profiles>
		<profile>
			<id>skip-ui-tests</id>
			<activation>
				<property>
					<name>skip-ui-tests</name>
				</property>
			</activation>
			<properties>
				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
			</properties>
		</profile>
	</profiles>

	<licenses>
		<license>
			<name>Eclipse Public License v1.0</name>
			<comments>
       All rights reserved.

       This program and the accompanying materials are made
       available under the terms of the Eclipse Public License v1.0
       which accompanies this distribution, and is available at
       http://www.eclipse.org/legal/epl-v10.htm
      </comments>
		</license>
	</licenses>
</project>
